# amiws

./: .codecov.yml  .gitignore  .gitmodules  .travis-install-cmocka.sh  .travis.yml  CMakeLists.txt  CMakePack.cmake  Makefile  Makefile.am  Makefile.in  README.md  bootstrap  config.h  config.h.in  config.status  configure  configure.ac  vimrc.local
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in
etc/: amiws.annotated.yaml  amiws.sample.yaml  amiws.service  amiws.sysv.init
rpm/: amiws-2.2.1-Linux.rpm
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  amiws.c  amiws.h  amiws_lib.c  config.h.in
src/.deps/: amiws-amiws.Po  amiws.Po  amiws_lib.Po  frozen.Po
src/lib/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  amipack.c  amipack.h  amipack_parse.c  amipack_parse.re  amipack_parse_prompt.c  amipack_parse_prompt.re  amipack_parser_command.c  amipack_parser_command.re  amipack_parser_detect.c  amipack_parser_detect.re  amipack_parser_message.c  amipack_parser_message.re  amipack_parser_prompt.c  amipack_parser_prompt.re  amipack_parser_queue.c  amipack_parser_queue.re  amiws.h  amiws_lib.c  config.c  config.h.in  config_parser.c  config_parser.h  config_parser.y  linked_str_stack.c  linked_str_stack.h  mongoose.c
src/lib/.deps/: amipack.Po  amipack_parse.Po  amipack_parse_prompt.Po  amiws_lib.Po  libmongoose_a-mongoose.Po  mongoose.Po
test/: 01_test_ami.t  01_test_ws.t  AddCMockaTest.cmake  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  ami_msg_parse_test.c  amipack_parse_queue_test  amipack_parse_queue_test.c  amipack_parse_test.c  amiws_test.pl  config_test  config_test.c  pack_scan  pack_scan.c  test_config.c  test_create_packet.c  test_pack_scan.c  test_pack_type_detect.c  test_parser_command.c  test_parser_message.c  test_parser_prompt.c  test_parser_queue  test_parser_queue.c
test/.deps/: 01_ami_single_conn-01_ami_single_conn.Po  amipack_create_test-amipack_create_test.Po  amipack_parse_queue_test-amipack_parse_queue_test.Po  amipack_parse_test-amipack_parse_test.Po  config_test-config_test.Po  mytest-mytest.Po  mytest.Po  pack_scan-pack_scan.Po
test/fixtures/: auth_settings.yml  default_vals.yml  invalid_auth_no_domain.yml  invalid_auth_no_file.yml  invalid_int_value.yml  invalid_ssl_no_cert.yml  invalid_ssl_no_key.yml  missing_host.yml  missing_name.yml  missing_password.yml  missing_username.yml  multi_ami_host.yml  single_ami_host.yml
web_root/: amipack.js  index.html  main.js  utils.js  visual.js
web_root_vue/: .eslintignore  .eslintrc.js  README.md  index.html  package-lock.json  package.json
web_root_vue/config/: dev.env.js  prod.env.js
web_root_vue/src/: App.vue  logger.js  main.js
web_root_vue/src/components/: AMIServer.vue  AMIServersList.vue  ActiveCalls.vue  Visualization.vue
web_root_vue/src/components/charts/: CallsMap.vue  CallsTimeline.vue  CallsTotal.vue  ServerGauge.vue  mapdata.js  world.js
web_root_vue/src/store/: actions.js  ami-types.js  getters.js  index.js  mutation-types.js  mutations.js
web_root_vue/src/websock/: index.js
web_root_vue/test/unit/specs/: AMIServer.spec.js  AMIServersList.spec.js  ActiveCalls.spec.js
